MODON MRE BPDEV/force-app/main/default/objects/JointOwner__c/JointOwner__c.object-meta.xml
<CustomObject>
    <label>Joint Owner</label>
    <nameField>
        <displayFormat>JO-{0000}</displayFormat>
        <label>Joint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Joint Owners</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>