MODON MRE BPDEV/force-app/main/default/objects/JointOwner__c/fields/Joint_Account_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Joint_Account_Name_Arabic__c</fullName>
    <formula>JointOwnerAccount__r.AccountnameArabic__c</formula>
    <label>Joint Account Name Arabic</label>
    <type>Text</type>
</CustomField>