MODON MRE BPDEV/force-app/main/default/objects/JointOwner__c/fields/JointOwnerAccount__c.field-meta.xml
<CustomField>
    <fullName>JointOwnerAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Joint Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Joint Owners</relationshipLabel>
    <relationshipName>Joint_Owners</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>