MODON MRE BPDEV/force-app/main/default/objects/JointOwner__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Joint Owners</relationshipLabel>
    <relationshipName>Joint_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>