MODON MRE BPDEV/force-app/main/default/objects/JointOwner__c/fields/OwnershipPercentage__c.field-meta.xml
<CustomField>
    <fullName>OwnershipPercentage__c</fullName>
    <label>Ownership %</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>