MODON MRE BPDEV/force-app/main/default/objects/JointOwner__c/fields/RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>RelationshipType__c</fullName>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint Owner P-P</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>