MODON MRE BPDEV/force-app/main/default/objects/JointOwner__c/fields/Sales_Order_Q_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Q_External_Id__c</fullName>
    <formula>SalesOrder__r.Q_External_Id__c</formula>
    <label>Sales Order Q External Id</label>
    <type>Text</type>
</CustomField>