MODON MRE BPDEV/force-app/main/default/objects/JointOwner__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>ServiceRequest__c</referenceTo>
    <relationshipLabel>Joint Owners</relationshipLabel>
    <relationshipName>Joint_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>